index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://api.hustensaft.org/HGrouplogo.png');
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
             background-size: cover;
             background-position: center;
             color: white;
@@ -165,6 +165,7 @@
         .unternehmen-logo img {
             max-height: 80px;
             max-width: 80%;
+            object-fit: contain;
         }
         
         .unternehmen-content {
@@ -289,8 +290,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <!-- Platzhalter für Hustensaft Group Logo -->
-                    <div style="width: 50px; height: 50px; background-color: #3498db; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; border-radius: 5px;">HG</div>
+                    <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Group Logo">
                     <h1>Hustensaft Group</h1>
                 </div>
                 <nav>
@@ -308,6 +308,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
+            <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Group Logo" style="height: 100px; margin-bottom: 20px;">
             <h2>Hustensaft Group</h2>
             <p>Eine dynamische Unternehmensgruppe mit Fokus auf Management, Hosting und innovative Projekte</p>
             <a href="#unternehmen" class="btn">Unsere Unternehmen entdecken</a>
@@ -325,8 +326,7 @@
                 <!-- Hustensaft Management -->
                 <div class="unternehmen-card">
                     <div class="unternehmen-logo">
-                        <!-- Platzhalter für Hustensaft Management Logo -->
-                        <div style="font-size: 24px; font-weight: bold; color: #2c3e50;">H2M</div>
+                        <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Management Logo">
                     </div>
                     <div class="unternehmen-content">
                         <h3>Hustensaft Management</h3>
@@ -338,8 +338,7 @@
                 <!-- Hustensaft Hosting -->
                 <div class="unternehmen-card">
                     <div class="unternehmen-logo">
-                        <!-- Platzhalter für Hustensaft Hosting Logo -->
-                        <div style="font-size: 24px; font-weight: bold; color: #2c3e50;">HUSTENSAFT</div>
+                        <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Hosting Logo">
                     </div>
                     <div class="unternehmen-content">
                         <h3>Hustensaft Hosting</h3>
@@ -351,8 +350,7 @@
                 <!-- BTFM Projects -->
                 <div class="unternehmen-card">
                     <div class="unternehmen-logo">
-                        <!-- Platzhalter für BTFM Projects Logo -->
-                        <div style="font-size: 24px; font-weight: bold; color: #2c3e50;">BTFM</div>
+                        <img src="https://api.hustensaft.org/btfmprojects.png" alt="BTFM Projects Logo">
                     </div>
                     <div class="unternehmen-content">
                         <h3>BTFM Projects</h3>
@@ -375,8 +373,7 @@
                     <a href="#kontakt" class="btn">Kontakt aufnehmen</a>
                 </div>
                 <div class="ueber-uns-image">
-                    <!-- Platzhalter für ein Bild -->
-                    <div style="width: 100%; height: 300px; background-color: #34495e; display: flex; align-items: center; justify-content: center; color: white; border-radius: 8px;">Unternehmensbild</div>
+                    <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Group Logo">
                 </div>
             </div>
         </div>
@@ -387,7 +384,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Hustensaft Group</h3>
+                    <img src="https://api.hustensaft.org/HGrouplogo.png" alt="Hustensaft Group Logo" style="height: 40px; margin-bottom: 15px;">
                     <p>Eine dynamische Unternehmensgruppe mit Fokus auf Management, Hosting und innovative Projekte.</p>
                 </div>
                 <div class="footer-column">
