--- a/lyolva.html
+++ b/lyolva.html
@@ -104,7 +104,7 @@
 
     <!-- AUDIO PLAYER -->
     <audio controls>
-        <source src="Du bist weg - Lyolva.mp3" type="audio/mpeg">
+        <source src="Du_bist_weg.mp3" type="audio/mpeg">
         Dein Browser unterstützt den Audio-Player nicht.
     </audio>
 
