--- a/lyolva.html
+++ b/lyolva.html
@@ -187,19 +187,19 @@ footer {
     <div class="stickers">
 
         <a class="sticker spotify"
-           href="https://open.spotify.com/search/Lyolva%20Du%20bist%20weg"
+           href="https://open.spotify.com/intl-de/artist/4hjy9rgDScfFWssYCKiUtg"
            target="_blank">
             <span>🎧</span> Listen on Spotify
         </a>
 
         <a class="sticker apple"
-           href="https://music.apple.com/de/search?term=Lyolva%20Du%20bist%20weg"
+           href="https://music.apple.com/de/artist/lyolva/1855983411"
            target="_blank">
             <span>🍏</span> Listen on Apple Music
         </a>
 
         <a class="sticker amazon"
-           href="https://music.amazon.com/search/lyolva%20du%20bist%20weg"
+           href="https://music.amazon.com/artists/B0G3YHC8VQ/lyolva?marketplaceId=A1PA6795UKMFR9&musicTerritory=DE&ref=dm_sh_NatDSHXwNWGYS9BlspqHR9i2A"
            target="_blank">
             <span>🛒</span> Listen on Amazon Music
         </a>
