--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 description: "Die Hustensaft Group ist das Dach, unter dem alle unsere Geschäftsbereiche vereint sind.",
                 team: [
                     { name: "Maxim", alias: "Hu_stensaft", role: "CEO und Gründer", initial: "M", image: maximApiUrl },
+                    { name: "Fabio K.", alias: "Fambos", role: "Hosting-Partner", initial: "F", image: maximApiUrl },
                     { name: "Lucas", alias: "", role: "Entwicklungsleitung", initial: "L", image: lucasApiUrl }
                 ]
             },
